# neptun

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: clang-tidy.cmake
sandbox/scenes/: 2018_2_28_15_57_19.scene  2018_3_2_14_39_33.scene  Armadillo Zoom 0.scene  Armadillo Zoom 1.scene  Armadillo Zoom 2.scene  Armadillo Zoom 3.scene  Armadillo Zoom 4.scene  Armadillo Zoom 5.scene  Armadillo in a Box.scene  Armadillo.scene  Armadillo_Zoom_0.scene  Exhaust Pipe Left.scene  Exhaust Pipe Right.scene  Exhaust Pipe.scene  Mix 2.scene  Mix in a Box close.scene  Mix in a Box.scene  Mix.scene  Neptune in a Box.scene  Neptune.scene  Rungholt Close.scene  Rungholt Default.scene  Rungholt Far.scene  Rungholt.scene  Torus Knot.scene  Torus Knots in a Box.scene  Torus Knots.scene  imgui.ini  lagae_armadillo.scene  lagae_armadillo_not_p.scene  lagae_chair.scene  lagae_forest.scene  lagae_forest_large_chair.scene  lagae_forest_small_chair.scene  lagae_neptune.scene  lagae_neptune_not_p.scene  soup.scene
sandbox/shaders/: lineFragmentShader.glsl  lineVertexShader.glsl  triFragmentShader.glsl  vertexShader.glsl
scripts/benchmarks/: tetmesh_traversal.py
src/neptun/: main.cpp
src/neptun/accelerators/: accelerator.cpp  accelerator.h  ray.h
src/neptun/argparse/: argparse.cpp  argparse.h  argument.cpp  argument.h  util.h
src/neptun/cuda/: raycaster.cu  raycaster.cuh  test1.cu
src/neptun/editor/: editor.cpp  editor.h  graphics.cpp  graphics.h  imgui_impl_glfw_gl3.cpp
src/neptun/editor/shaders/: fragmentShader.glsl  triFragmentShader.glsl  triVertexShader.glsl  vertexShader.glsl
src/neptun/main/: accelerator.cpp  accelerator.h  asset_importer.cpp  asset_importer.h  basis.h  bounds.cpp  bounds.h  bvh.cpp  bvh.h  color.cpp  color.h  component.cpp  component.h  face.h  filesystem.h  hilbert.c  image.cpp  image.h  kd_tree.cpp  kd_tree.h  light.cpp  light.h  logger.cpp  logger.h  main.cpp  material.h  memory.cpp  memory.h  mesh.cpp  mesh.h  procedural_mesh_generator.cpp  procedural_mesh_generator.h  proceduralmeshgenerator.cpp  proceduralmeshgenerator.h  ray.h  ray_tracer.cpp  ray_tracer.h  scene.cpp  scene.h  sceneObject.cpp  (+12 more)
src/neptun/math/: matrix.cpp  matrix.h  random.cpp  random.h  tangent_frame.h  transform.cpp  transform.h
src/neptun/tet_mesh/: tet_mesh_builder.h  tet_mesh_builder_factory.h  tetgen_tet_mesh_builder.h  tetwild_tet_mesh_builder.h
src/neptun/util/: timer.h
src/neptun2/accelerators/: accelerator.cpp  accelerator.h  bvh_embree.cpp  bvh_embree.h  bvh_pbrt.cpp  bvh_pbrt.h  kd_tree.cpp  kd_tree.h  noaccelerator.cpp  noaccelerator.h  ray.h
src/neptun2/integrators/: cast.cpp  cast.h  integrator.h
src/neptun2/main/: image.cpp  image.h  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  sceneio.cpp  sceneio.h
src/neptun2/math/: bounds.cpp  bounds.h  transform.cpp  transform.h
src/neptun2/util/: filesystem.h  memory.cpp  memory.h  parallel.h  timer.h
